# pingpong

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.scripts  Dockerfile.srv  Dockerfile.srv.slim  LICENSE  README.md  aitutor.service  aitutor.sh  alembic.ini  arch-orig.drawio  cleanup-worktree-resources.sh  config.dev.example.toml  config.local.example.toml  config.toml  conftest.py  create-worktree.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.py  install.sh  loadtest.py  manifest.json  migrate.sh  nginx.conf  package.json  pyproject.toml  pytest.ini  remove-worktree.sh  rollout.sh  run-codeql-pr.sh  start-dev-db.sh  start-dev-docker.sh  (+1 more)
.github/: CODEOWNERS  dependabot.yml  docker-srv.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yaml  02-suggestion.yaml
.github/workflows/: claude-code-review.yml  claude.yml  commit.yml  create-release.yml  create-release.yml.disabled  docker-build.yml  docker-srv-stage.yml  docker-srv.yml  docker-web-stage.yml  docker-web.yml  fe-study.yml  fe.yml  python.yml  release-image.yml  release-v2.yml  release-v2.yml.disabled  release.yml  reuse-images.yml  staging-pr-build.yml  tag-commit-1.yml  tag-commit-2.yml  tag-commit.yml  test-on-staging.yml
aitutor/: __main__.py  agent.py  ai.py  app.py  auth.py  bot.py  cache.py  chat.py  chat_with_chroma_completion.py  chat_with_data_completion.py  claim.py  config.py  db.py  email.py  endpoint.py  errors.py  gravatar.py  invite.py  meta.py  metrics.py  models.py  otel.py  permission.py  reaction.py  schemas.py  server.py  template.py  test_template.py  text.py  thread.py
aitutor/db/: __init__.py  base.py  pg.py
aitutor/email/: base.py  smtp.py
aitutor/prompts/: 201-few-shot.jsonl
aitutor/search/: __init__.py  analyze.py  ingest.py  search.py
alembic/: env.py  script.py.mako
alembic/versions/: 0a1b2c3d4e5f_add_lesson_timeline_bypass.py  0a1c5d9b7e44_lecture_video_runtime_control_and_.py  0a9e2ba4455c_add_api_key_name.py  0b7a1d2e9c45_add_video_description_duration.py  17f9db8bc1a2_add_lecture_slide_additional_context.py  1dc0c8626e4a_add_disable_prompt_randomization.py  1dc9f1a10c8d_add_responses_api_schema.py  1e252e8386de_add_locked_column_for_assistants.py  1e3393e8b3a9_add_thread_exports_table.py  205658710c84_migration_to_assistants_api_v2_.py  213e590b8c5f_anonymous_links.py  22ef0e00b450_add_columns_for_assistant_management_.py  24f4cd191aa5_ai_summaries.py  26615172d87e_user_agreements.py  29bf10fa9462_add_api_key_table.py  2b8a809f389b_add_can_share_assistants_permission.py  2f9a6b7e8c31_add_safety_identifier_uuid_columns.py  337b7d1fe811_add_user_connectors.py  351f7fa9482e_migrate_to_assistants_api_v2.py  371b3a44a211_add_hide_mcp_details.py  392821b96cb0_ai_summaries.py  39fad082e71b_add_sso_merging_dependencies.py  3cc56efe20a8_add_resource_link_id_in_lticlass.py  3d0b22f9fd11_add_voice_id_to_lecture_videos.py  3e4f5a6b7c8d_add_code_interpreter_visibility_settings.py  3e8a1c5d9b27_threads_add_is_test_column.py  4209ab7d4b7b_add_panopto_integration_fields.py  443687e4b64c_clean_up_after_migration.py  4452de1e99bc_add_reasoning.py  44edbf2cecbc_add_private_field_for_classes.py  46bb3044681e_add_web_search.py  4a9d7c3e2f10_add_realtime_transcription_model.py  4aed51ccae36_added_lecture_video_id_to_threads.py  4b6d8576721d_add_class_delete_fk_dependency.py  4c1b8a7d5e6f_add_institution_lecture_video_default_keys.py  4db0bf59f8c2_add_message_phase.py  52dfd11d4503_user_agreements.py  52ea2873763b_add_canvas_api_tokens.py  532eea36d1c6_email_as_externallogin_provider.py  537e633357fb_add_lticlass.py  (+105 more)
analysis/: power.R
cert/: DevRootCA.crt  DevRootCA.key  DevRootCA.srl  README.md  dev.crt  dev.csr  dev.key  domains.ext
docs/diagrams/: arch-orig.drawio
models/: api-201-search.toml  general.toml  quiz.toml  triage.toml
models/api-201-ab/: general.toml  quiz.toml  search.toml
models/api-201-cd/: quiz.toml  search.toml
models/api-209/: general.toml  quiz.toml  search.toml
models/api-318/: quiz.toml  search.toml
openfga/: Dockerfile
pingpong/: __main__.py  adjectives.py  ai.py  ai_error.py  ai_models.py  animal_hash.py  animals.py  api_keys.py  artifacts.py  assistant_service.py  audio_store.py  auth.py  auth_test.py  bg.py  bg_tasks.py  canvas.py  ci_calls.py  class_credential_validation.py  class_credentials.py  compress.py  config.py  copy.py  db.py  elevenlabs.py  elevenlabs_defaults.py  emails.py  errors.py  files.py  followup_transform.py  gemini.py  hash.py  interactive_lesson_runtime.py  invite.py  invite_template.html  lecture_slide_chat.py  lecture_slide_processing.py  lecture_slide_runtime.py  lecture_slide_service.py  lecture_video_chat.py  lecture_video_manifest_generation.py  (+125 more)
pingpong/authz/: __init__.py  admin_migration.py  authz.fga  authz.fga.json  base.py  migrate.py  mock.py  openfga.py  private_groups.py
pingpong/connectors/: __init__.py  base.py  panopto.py  state.py
pingpong/db/: sqlite.py
pingpong/email/: __init__.py  azure.py  base.py  mock.py  smtp.py
pingpong/lti/: __init__.py  allowlist.py  canvas_connect.py  claims.py  constants.py  endpoints.py  http.py  key_manager.py  lti_course.py  lti_user.py  roles.py  schemas.py  server.py
pingpong/migrations/: m01_file_class_id_to_assoc_table.py  m02_remove_responses_threads_assistants.py  m03_migrate_to_next_gen.py  m04_check_voice_mode_recordings.py  m05_populate_account_lti_guid.py  m06_cleanup_orphaned_lti_classes.py  m07_backfill_lecture_video_content_lengths.py  (+16 more)
saml/: README.md
scripts/: assistants_load_test.py  gendata.py  loadtest.py  quickload.py  summarize.py
slack/: manifest.json
statschat/: agent.py  app.py  chat.py  claim.py  config.py  meta.py  prompt.py  text.py
web/: Dockerfile  default.conf.template
web/pingpong/: .env  (+17 more)
workspaces/: api-201-ab.toml  api-201-cd.toml  api-209.toml
(+445 files in other folders)
