[tool.poetry]
name = "pingpong"
version = "7.12.1"
description = "A software platform carefully designed for AI-driven learning."
authors = ["Joe Nudell <jnudell@hks.harvard.edu>", "Evangelos Kassos <github@evangeloskassos.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = {extras = ["realtime"], version = "^2.17.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
slack-sdk = "^3.39.0"
sentry-sdk = "^2.52.0"
aiocontextvars = "^0.2.2"
tiktoken = "^0.12.0"
async-throttle = "1.0.0"
opentelemetry-api = "^1.20.0"
requests = "^2.32.5"
fastapi = {extras = ["standard"], version = "^0.128.6"}
starlette = "^0.52.1"
uvicorn = "^0.40.0"
aiohttp = "^3.13.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
pyjwt = "^2.11.0"
aiosqlite = "^0.22.1"
python-multipart = "^0.0.22"
websockets = "^15.0"
azure-communication-email = "^1.1.0"
aiosmtplib = "^5.1.0"
asyncpg = "^0.31.0"
alembic = "^1.18.3"
psycopg2-binary = "^2.9.11"
discord-py = "^2.6.4"
openfga-sdk = "0.9.9"
uvloop = "^0.22.1"
opentelemetry-sdk = "^1.23.0"
pytz = "^2025.2"
httpx = "0.28.1"
httpcore = "1.0.9"
anyio = "4.12.1"
gunicorn = "^25.0.3"
orjson = "^3.11.7"
mmh3 = "5.2.0"
python-glowplug = "^0.3.12"
python3-saml = "^1.16.0"
arrow = "^1.4.0"
humanize = "^4.15.0"
aioboto3 = "^15.5.0"
uvicorn-worker = "^0.4.0"
email-validator = "^2.3.0"
beautifulsoup4 = "^4.14.3"
pydub = "^0.25.1"
pybase64 = "^1.4.3"
uuid-utils = "^0.14.0"
pyairtable = "^3.3.0"
cryptography = "^46.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pre-commit = "^4.5.0"
locust = "^2.43.2"
pytest-asyncio = "^1.3.0"
tqdm = "^4.67.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
