[project]
name = "pingpong"
version = "7.61.0"
description = "A software platform carefully designed for AI-driven learning."
readme = "README.md"
requires-python = ">= 3.11, <4.0.0"
authors = [
    { name = "Joe Nudell", email = "jnudell@hks.harvard.edu" },
    { name = "Evangelos Kassos", email = "github@evangeloskassos.com" }
]
license = "MIT"
dependencies = [
    "aioboto3 ~= 15.5.0",
    "aiohttp~=3.14.1",
    "aiosmtplib~=5.1.1",
    "aiosqlite ~= 0.22.1",
    "alembic ~= 1.18.4",
    "arrow ~= 1.4.0",
    "asyncpg ~= 0.31.0",
    "audioop-lts ~= 0.2.2 ; python_full_version >= '3.13'",
    "authlib ~= 1.7.2",
    "azure-communication-email ~= 1.1.0",
    "beautifulsoup4 ~= 4.14.3",
    "cryptography~=48.0.1",
    "discord-py~=2.7.1",
    "elevenlabs~=2.51.0",
    "email-validator ~= 2.3.0",
    "fastapi[standard]~=0.136.3",
    "google-genai [aiohttp] ~= 1.67.0",
    "httpx ~= 0.28.1",
    "humanize ~= 4.15.0",
    "mmh3 ~= 5.2.0",
    "openai[realtime]~=2.41.1",
    "openfga-sdk~=0.10.3",
    "opentelemetry-api ~= 1.39.1",
    "opentelemetry-sdk ~= 1.39.1",
    "orjson~=3.11.9",
    "psycopg2-binary~=2.9.12",
    "pybase64 ~= 1.4.3",
    "pydantic~=2.13.4",
    "pydantic-settings~=2.14.1",
    "pydub ~= 0.25.1",
    "pyjwt~=2.13.0",
    "pypdf~=6.13.0",
    "python-glowplug ~= 0.3.12",
    "python3-saml ~= 1.16.0",
    "pytz~=2026.2",
    "requests~=2.34.2",
    "sentry-sdk~=2.61.1",
    "sqlalchemy [asyncio] ~= 2.0.46",
    "starlette~=1.3.1",
    "tiktoken~=0.13.0",
    "tqdm ~= 4.67.3",
    "uuid-utils~=0.16.0",
    "uvicorn~=0.49.0",
]

[project.urls]
Homepage = "https://pingpong.hks.harvard.edu/"
Repository = "https://github.com/comppolicylab/pingpong.git"
Issues = "https://github.com/comppolicylab/pingpong/issues"
ReleaseNotes = "https://github.com/comppolicylab/pingpong/releases"

[dependency-groups]
dev = [
    "locust~=2.44.3",
    "pre-commit~=4.6.0",
    "pytest~=9.0.3",
    "pytest-asyncio~=1.4.0",
]

[tool.uv]
override-dependencies = ["pygments >= 2.20.0", "mako >= 1.3.12"]
